--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg-hstore": "^2.3.4",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-icons": "^5.3.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
