--- a/package.json
+++ b/package.json
@@ -14,15 +14,25 @@
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "csv-parse": "^5.5.6",
+    "csv-parser": "^3.0.0",
+    "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
+    "formidable": "^3.5.2",
     "joi": "^17.13.3",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "next": "15.0.2",
+    "next-connect": "^0.12.2",
+    "papaparse": "^5.4.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-icons": "^5.3.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8",
